install cron and task-ssh-server as some cloud provider images miss things - see https://github.com/FreePBX/sng_freepbx_debian_install/issues/3

--- a/ansible-role/sng_freepbx_debian/tasks/packages.yml
+++ b/ansible-role/sng_freepbx_debian/tasks/packages.yml
@@ -32,6 +32,15 @@
     - { q: "mailname",          a: "{{ sfpd_mailname }}" }
     - { q: "main_mailer_type",  a: "{{ sfpd_main_mailer_type }}" }
 
+- name: Install basic deb packages from main Debian repos that are lacking from some cloud providers.
+  become: true
+  ansible.builtin.apt:
+    state: present
+    dpkg_options: "{{ omit if sfpd_fast == 'true' else 'force-confnew,force-overwrite' }}"
+    name:
+      - cron
+      - task-ssh-server
+
 - name: Install deb packages from main Debian repos.
   become: true
   ansible.builtin.apt:
