allow disabling ioncube (parallels upstream commit 0f4657a7aee67443b4f7483eabff978a3e7450c4

--- a/ansible-role/sng_freepbx_debian/defaults/main/controls.yml
+++ b/ansible-role/sng_freepbx_debian/defaults/main/controls.yml
@@ -9,6 +9,7 @@
 
 sfpd_install_asterisk: true
 sfpd_install_freepbx: true
+sfpd_install_ioncube: true
 sfpd_install_testing: false
 
 # Another good choice might be the LTS version 20.
