postfix mailname differs from latest bash installer

--- a/ansible-role/sng_freepbx_debian/defaults/main/controls.yml
+++ b/ansible-role/sng_freepbx_debian/defaults/main/controls.yml
@@ -16,6 +16,7 @@ sfpd_install_testing: false
 sfpd_asterisk_version: 21
 
 # The postfix mail config is janky.
+# Current upstream bash installer uses hostname -f as the mailname.
 sfpd_mailname: "my.hostname.example"
 sfpd_main_mailer_type: "Internet Site"
 
