now parsing command line args to be an even closer match to current installer

--- a/ansible-role/sng_freepbx_debian/defaults/main/versions.yml
+++ b/ansible-role/sng_freepbx_debian/defaults/main/versions.yml
@@ -9,3 +9,6 @@
 pngnx_php_major: 8
 pngnx_php_minor: 2
 pngnx_php_version: "{{ pngnx_php_major }}.{{ pngnx_php_minor }}"
+
+# specific to the Sangoma installer
+sfpd_aac_version: "2.0.1-1"
