--- a/ansible-role/sng_freepbx_debian/defaults/main/urls.yml
+++ b/ansible-role/sng_freepbx_debian/defaults/main/urls.yml
@@ -5,5 +5,5 @@
 # sng_freepbx_debian/defaults/main/urls.yml
 
 sfpd_libfdk_baseurl: "http://deb.debian.org/debian/pool/non-free/f/fdk-aac/"
-sfpd_libfdk_aac: "libfdk-aac2_2.0.1-1_amd64.deb"
-sfpd_libfdk_aac_dev: "libfdk-aac-dev_2.0.1-1_amd64.deb"
+# sfpd_libfdk_aac: "libfdk-aac2_2.0.1-1_amd64.deb"
+# sfpd_libfdk_aac_dev: "libfdk-aac-dev_2.0.1-1_amd64.deb"
