--- a/ansible-role/sng_freepbx_debian/tasks/freepbx.yml
+++ b/ansible-role/sng_freepbx_debian/tasks/freepbx.yml
@@ -26,7 +26,7 @@
   become: true
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - ma
       - install
       - "{{ item }}"
@@ -42,7 +42,7 @@
   when: sfpd_freepbx_size is not defined or sfpd_freepbx_size == "default"
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - ma
       - installlocal
   environment:
@@ -54,7 +54,7 @@
   when: sfpd_freepbx_size == "basic" or sfpd_freepbx_size == "extra"
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - ma
       - install
       - "{{ pngnx_freepbx_basic_modules | flatten }}"
@@ -67,7 +67,7 @@
   when: sfpd_freepbx_size == "extra"
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - ma
       - install
       - "{{ pngnx_freepbx_extra_modules | flatten }}"
@@ -78,7 +78,7 @@
   become: true
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - ma
       - upgradeall
   environment:
@@ -88,7 +88,7 @@
   become: true
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - ma
       - refreshsignatures
   environment:
@@ -98,7 +98,7 @@
   become: true
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - reload
   environment:
     PATH: "{{ ansible_env.PATH }}:/sbin:/usr/sbin"
@@ -108,7 +108,7 @@
   become: true
   ansible.builtin.command:
     argv:
-      - /sbin/fwconsole
+      - fwconsole
       - restart
   environment:
     PATH: "{{ ansible_env.PATH }}:/sbin:/usr/sbin"
@@ -138,7 +138,7 @@
   become: true
   ansible.builtin.command:
     argv:
-      - /usr/sbin/fwconsole
+      - fwconsole
       - motd
   register: rmotd
 
