--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -1,3 +1,6 @@
+---
+# .github/workflows/gh-release.yml
+
 name: GH Release
 
 on:
@@ -7,6 +10,7 @@ on:
 
 jobs:
   build:
+    name: GH Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
