--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -1,6 +1,8 @@
 ---
 # .github/workflows/gh-release.yml
 
+# Continuous Delivery of GitHub Releases when push is tagged with a version number
+
 name: GH Release
 
 on:
