--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -6,7 +6,7 @@ name: Ansible Lint
 on: push
 
 jobs:
-  build:
+  run-ansible-lint:
     name: Ansible Lint # Naming the build is important to use it as a status check
     runs-on: ubuntu-latest
     steps:
